--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "ES6",                                  
     "module": "Node16",
-    "allowJs": true                           
+    "allowJs": true,
+    "outDir": "dist"                           
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
