--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/express": "^4.17.21",
+    "@types/node": "^22.10.2",
     "dotenv": "^16.4.7",
     "typescript": "^5.7.2"
   },
