--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
     "target": "ES6",                                  
-    "module": "Node16",
+    "module": "ES2020",
     "allowJs": true,
     "outDir": "dist"                           
   },
