`Update package.json and tsconfig.json to enable ES module support`

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "josbapi-with-prisma",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "tsc && node dist/server.js"
   },
