--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.1",
     "@types/node": "^22.10.2",
     "dotenv": "^16.4.7",
     "typescript": "^5.7.2"
