--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.17.1",
-    "@types/node": "^22.10.2",
-    "dotenv": "^16.4.7",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+     "express": "^4.17.1",
+  "dotenv": "^16.4.7",
+  "@types/express": "^4.17.1",
+  "@types/node": "^22.10.2"
   }
 }
