--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["types"]
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
