--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "josbapi-with-prisma",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
-  "types": "node",
   "scripts": {
     "start": "tsc && node dist/server.js"
   },
@@ -11,13 +9,14 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "typescript": "^5.7.2"
-  },
   "dependencies": {
-    "@types/express": "^4.17.1",
-    "@types/node": "^20.14.8",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.0",
     "dotenv": "^16.4.7",
-    "express": "^4.17.1"
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@types/typescript": "^0.4.29",
+    "typescript": "^5.7.2"
   }
 }
