--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "josbapi-with-prisma",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "tsc && node dist/server.js"
+    "start": "tsc && node dist/server.js",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,11 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/typescript": "^0.4.29",
-    "typescript": "^5.7.2"
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2"
   }
 }
