--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "tsc && node dist/server.js",
+    "dev": "nodemon src/server.ts",
     "lint": "eslint . --ext .ts"
   },
   "keywords": [],
@@ -15,7 +16,11 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.3.0",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
