--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "types": ["node"],
-    "typeRoots": [ "./node_modules/@types", "../node_modules/@types", "../../node_modules/@types" ]
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
