--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@sendgrid/mail": "^8.1.4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.8",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.7.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "zod": "^3.24.1"
