--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@types/react-router": "^5.1.20",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +20,7 @@
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
